tests/errors/consts/const_without_initial_value.ne
function main(): int32
{
    const noInitialValue: int32;
}
